Implement backend user's handlers
