# backend/api/oas_schemas_gen.go
@@ -208,6 +208,52 @@ func (o OptNote) Or(d Note) Note {
 	return d
 }
 
+// NewOptString returns new OptString with value set to v.
+func NewOptString(v string) OptString {
+	return OptString{
+		Value: v,
+		Set:   true,
+	}
+}
+
+// OptString is optional string.
+type OptString struct {
+	Value string
+	Set   bool
+}
+
+// IsSet returns true if OptString was set.
+func (o OptString) IsSet() bool { return o.Set }
+
+// Reset unsets value.
+func (o *OptString) Reset() {
+	var v string
+	o.Value = v
+	o.Set = false
+}
+
+// SetTo sets value to v.
+func (o *OptString) SetTo(v string) {
+	o.Set = true
+	o.Value = v
+}
+
+// Get returns value and boolean that denotes whether value was set.
+func (o OptString) Get() (v string, ok bool) {
+	if !o.Set {
+		return v, false
+	}
+	return o.Value, true
+}
+
+// Or returns value if set, or given parameter if does not.
+func (o OptString) Or(d string) string {
+	if v, ok := o.Get(); ok {
+		return v
+	}
+	return d
+}
+
 // NewOptUser returns new OptUser with value set to v.
 func NewOptUser(v User) OptUser {
 	return OptUser{
@@ -270,7 +316,19 @@ type PostAPIV1UserBadRequest struct{}
 func (*PostAPIV1UserBadRequest) postAPIV1UserRes() {}
 
 // PostAPIV1UserOK is response for PostAPIV1User operation.
-type PostAPIV1UserOK struct{}
+type PostAPIV1UserOK struct {
+	SetCookie OptString
+}
+
+// GetSetCookie returns the value of SetCookie.
+func (s *PostAPIV1UserOK) GetSetCookie() OptString {
+	return s.SetCookie
+}
+
+// SetSetCookie sets the value of SetCookie.
+func (s *PostAPIV1UserOK) SetSetCookie(val OptString) {
+	s.SetCookie = val
+}
 
 func (*PostAPIV1UserOK) postAPIV1UserRes() {}
 
